fix for notification count icon on mobile

--- a/src/components/Layout/Layout.scss
+++ b/src/components/Layout/Layout.scss
@@ -46,8 +46,8 @@
     justify-content: center;
     align-items: center;
     position: absolute;
-    bottom: rem(75px);
-    right: rem(28px);
+    bottom: rem(58px);
+    right: rem(18px);
     text-overflow: ellipsis;
     overflow: hidden;
     white-space: nowrap;
